# ocp-diag-quickstart

./: README.md  requirements.txt
python/: .gitignore  README.md
python/binary/: .gitignore  README.md  pyproject.toml  requirements.txt
python/binary/src/sample_diag/: __main__.py  sample.py
python/binary/tests/sample_diag/: test_sample.py
python/publish/: .gitignore  README.md  pyproject.toml  requirements.txt
python/publish/src/sample_diag/: sample.py
python/publish/tests/sample/: test_sample.py
python/simple/: README.md  requirements.txt  sample.py
rust/: .gitignore  Cargo.toml  README.md
rust/src/: main.rs
